tests/bad/methods_invalid_struct.oc
/// fail: Could not find type with this name

def Foo::bar() {}